docs/0.6/_sources/api/gammapy.spectrum.SpectrumFit.rst.txt


SpectrumFit
============================

.. currentmodule:: gammapy.spectrum

.. autoclass:: SpectrumFit
   :show-inheritance:

   
     
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~SpectrumFit.bins_in_fit_range
      ~SpectrumFit.fit_range
      ~SpectrumFit.predicted_counts
      ~SpectrumFit.statval
      ~SpectrumFit.total_stat
      ~SpectrumFit.true_fit_range

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~SpectrumFit.calc_statval
      ~SpectrumFit.est_errors
      ~SpectrumFit.fit
      ~SpectrumFit.likelihood_1d
      ~SpectrumFit.plot_likelihood_1d
      ~SpectrumFit.predict_counts
      ~SpectrumFit.run

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: bins_in_fit_range
   .. autoattribute:: fit_range
   .. autoattribute:: predicted_counts
   .. autoattribute:: statval
   .. autoattribute:: total_stat
   .. autoattribute:: true_fit_range

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: calc_statval
   .. automethod:: est_errors
   .. automethod:: fit
   .. automethod:: likelihood_1d
   .. automethod:: plot_likelihood_1d
   .. automethod:: predict_counts
   .. automethod:: run

   
   